# Mini-Lakehouse-Didattico

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  build.sh  dbt.cmd  dbt_project.yml  package-lock.yml  packages.yml  pyproject.toml  pytest.ini  ull  📦 CHANGELOG.md
.github/workflows/: ci-simulated.yml  ci.yml  dbt.yml  nightly.yml
audit/: __init__.py  audit_log.py  audit_report.json  audit_template.json  export_marts.py  snapshot_create.py  snapshot_test.py  snapshot_utils.py
audit/exports/csv/: agg_entrate_per_categoria.csv
audit/exports/parquet/: agg_entrate_per_categoria.parquet  mart_finanza_locale.parquet
cli/: core.py  export_utils.py  pipeline.py  utils.py
data/public/siope_it/milano/: 2016.csv
data/raw/: bilanci_comunali_sample.csv
dbt/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
dbt/data/raw/: bilanci_comunali_sample.csv
dbt/macros/: expect_column_values_to_be_between.sql  expect_column_values_to_be_greater_than.sql  fix_duckdb_persist_docs.sql
dbt/macros/audit/: delta_percentuale_flag.sql  test_delta_percentuale.sql
dbt/models/audit/: audit_base.sql  core_audit_flags.sql  mart_audit_log.sql  mart_audit_log.yaml
dbt/models/core/: core_bilanci_comuni.sql  core_bilanci_comuni.yml  core_movimenti_bilancio.sql  schema.yml
dbt/models/core/real/: core_real_siope.sql  schema.yml
dbt/models/core/simulated/: core_audit_flags.sql  core_bilanci_comuni.sql  core_movimenti_bilancio.sql  schema.yml
dbt/models/exposures/: exposures.yml
dbt/models/marts/: agg_entrate_per_categoria.sql  agg_entrate_per_categoria.yml  fact_bilanci_comunali.sql  fact_bilanci_comunali.yml  fatti_bilanci.sql  mart_finanza_locale.sql
dbt/models/marts/real/: mart_siope_totali_mensili.sql  schema.yml
dbt/models/marts/simulated/: agg_entrate_per_categoria.sql  agg_entrate_per_categoria.yml  fact_bilanci_comunali.sql  fact_bilanci_comunali.yml  mart_audit_log.sql  mart_finanza_locale.sql  mart_finanza_locale.yaml  schema.yml
dbt/models/raw/: raw_bilanci.sql  raw_bilanci_comunali.sql  raw_bilanci_voci.sql
dbt/models/raw/raw/: raw_bilanci.sql
dbt/models/staging/: schema.yml  stg_bilanci_comuni.sql  stg_bilanci_comuni.yml  stg_movimenti_bilancio.sql
dbt/models/staging/real/: schema.yml  stg_siope_real.sql
dbt/models/staging/simulated/: schema.yml  stg_bilanci_comuni.sql  stg_bilanci_comuni.yml  (+1 more)
dbt/seeds/: bilanci_voci_sample.csv  schema.yml
dbt/tests/: check_entrate_non_negative.sql  check_spese_non_negative.sql
dbt/tests/core/: check_anno_range.sql  check_entrate_non_negative.sql  check_spese_non_negative.sql  test_core_bilanci_comuni.sql  test_indicatore_affidabilita_range.sql
dbt/tests/marts/: test_indicatore_affidabilita_range_fact.sql
docs/: architecture.mmd  catalog.json  graph_summary.json  manifest.json  partial_parse.msgpack  real_data_poc.md  run_results.json
exports/csv/: agg_entrate_per_categoria.csv  fact_bilanci_comunali.csv  mart_finanza_locale.csv  mart_siope_totali_mensili.csv
exports/parquet/: agg_entrate_per_categoria.parquet  fact_bilanci_comunali.parquet  main_marts__agg_entrate_per_categoria.parquet
ingest/: ingest_csv.py
reports/: coverage.xml  ruff.json
scripts/: activate.ps1  extract_comune.py  script_comuni.py  update_readme.py
tests/: test_cli.py  test_cli_pipeline.py  test_export_utils.py  test_exports_marts.py  test_exposure_link.py  test_snapshot_test.py  test_snapshot_utils.py
tests/core/: test_core_bilanci_comuni.sql
(+67 files in other folders)
