[tool.poetry]
name = "mini-lakehouse"
version = "0.1.0"
description = "Mini data lakehouse locale didattico con DuckDB, dbt-core, Polars e audit JSON"
authors = ["Andrea Bozzo"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ingest" }]

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "1.9.3"
jupyter = "*"
rich = "*"
duckdb-engine = "^0.17.0"
duckdb = "^1.3.1"
pyarrow = "^20.0.0"
dbt-duckdb = "^1.9.3"
pandas = "^2.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "*"
isort = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
