[tool.poetry]
name = "mini-lakehouse"
version = "0.2.0"
description = "Mini data lakehouse locale didattico con DuckDB, dbt-core, Polars e audit JSON"
authors = ["Andrea Bozzo"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# Core
dbt-core = "1.9.3"
dbt-duckdb = "^1.9.3"
duckdb = "^1.3.1"
duckdb-engine = "^0.17.0"
polars = "^1.31.0"
pandas = "^2.3.0"
pyarrow = "^20.0.0"
rich = "*"

# Dev/Notebook
jupyter = "*"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.4.3"
pytest = "*"
safety = "*"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
exclude = ["dbt", ".venv", "build"]

[tool.ruff.lint.per-file-ignores]
"dbt/**" = ["E402", "F401", "F841"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
